@@ -1230,7 +1230,7 @@ static gpasmVal do_dim(gpasmVal r,
         return r;
       }
       
-      if (i == SYMBOL_SIZE) {
+      if (i == SYMBOL_SIZE_v1) {
         i = 0;
         aux_list = aux_list->next;      
       } else {
